data/collection/fixes/descriptions/scala/scala-10505
```scala
def length[@specialized(Int) A](as: List[A], len: A => Int, acc: Int): Int =
  as match {
    case Nil => acc
    case h :: t => length(t, len, acc + len(h))
  }
```
gives
```
<console>:14: error: type mismatch;
 found   : ?A1 where type ?A1 <: A (this is a GADT skolem)
 required: Int
           case h :: t => length(t, len, acc + len(h))
                ^
```

Tested with Scala 2.12.3.